[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/Meteor.gd" type="Script" id=1]
[ext_resource path="res://graphics/meteor.png" type="Texture" id=2]
[ext_resource path="res://objects/MeteorExplosionTimer.gd" type="Script" id=3]
[ext_resource path="res://sounds/explosion.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 14.0

[node name="Meteor" type="Area2D" groups=[
"obstacle",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -16, -16, 32, 32 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 35
one_shot = true
speed_scale = 4.0
explosiveness = 1.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.1
angular_velocity = 50.0
angular_velocity_random = 0.5
script = ExtResource( 3 )

[node name="DeathTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_Meteor_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
